added lambda project and change library location