@@ -26,10 +26,10 @@ public class MakeBeanPropertyTransient {
 			}
 		}
 		BeanToXmlTransient bean = new BeanToXmlTransient();
-		bean.setId(new Long(1));
+		bean.setId(Long.valueOf(1));
 		bean.setItemName("Item");
 		bean.setItemColour("Red");
-		bean.setItemQuantities(new Integer(100));
+		bean.setItemQuantities(100);
 
 		XMLEncoder encoder = new XMLEncoder(new BufferedOutputStream(new FileOutputStream(
 				"BeanTransient.xml")));
